--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,13 @@ baseurl: "" # the subpath of your site, e.g. /blog
 
 # Build settings
 markdown: kramdown
-theme: minima
+# theme: minima
 plugins:
   - jekyll-feed
+
+collections:
+  - coaching_workshops
+  - training_courses
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
