--- a/_config.yml
+++ b/_config.yml
@@ -13,12 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Emerald
-email: sam+emerald@mead.fm
+title: Alan Mead. Coach. Trainer.
+email: alan@alanmead.co
 description: >- # this means to ignore newlines until "baseurl:"
-  This is a code name.
+  Alan Mead is a Coach and a Trainer with over 30 year's experience.
 baseurl: "" # the subpath of your site, e.g. /blog
-# url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "alanmead.co" # the base hostname & protocol for your site, e.g. http://example.com
+twitter: Meady59
 
 # Build settings
 markdown: kramdown
