--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: alan@alanmead.co
 description: >- # this means to ignore newlines until "baseurl:"
   Alan Mead is a Coach and a Trainer with over 30 year's experience.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "alanmead.co" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://alanmead.co" # the base hostname & protocol for your site, e.g. http://example.com
 twitter: Meady59
 
 # Build settings
